# graphene

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  biome.json  index.html  package-lock.json  package.json  skills-lock.json  vite.config.ts
.cursor/hooks/state/: continual-learning-index.json
src/: App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/assets/styles/: main.scss
src/assets/styles/app/: _app.scss
src/assets/styles/base/: _mixins.scss  _reset.scss  _typography.scss  _variables.scss
src/assets/styles/components/: _EmptyState.scss  _FolderRow.scss  _NewItemPanel.scss  _NoteDetail.scss  _Sidebar.scss  _SnippetDetail.scss  _SnippetForm.scss  _TagPill.scss
src/components/: EmptyState.tsx  FolderPicker.tsx  FolderRow.tsx  ItemRow.tsx  MarkdownToolbar.tsx  NewItemPanel.tsx  NoteDetail.tsx  Sidebar.tsx  SnippetDetail.tsx  SnippetForm.tsx  TagPill.tsx
src/hooks/: useClickOutside.ts  useClipboard.ts  useDebouncedPersist.ts  useDeleteConfirm.ts  useDragToFolder.ts  useFileDrop.ts  useFolders.ts  useItems.ts  useKeyboardShortcuts.ts  useMarkdownFormat.ts  useSnippets.ts
src/lib/: fileFormat.ts  search.ts  storage.ts  utils.ts  vault.ts
